# bod

./: Cargo.toml  README.md  default.nix
src/: install_bod.rs  main.rs  yo.rs
